2010-03-24  Mark Rowe  <mrowe@apple.com>

        Revert the portion of r56489 that dealt with port zero as it introduced some test failures.

        * platform/mac/security/block-test-expected.txt:
        * security/block-test.html:

2010-03-24  Mark Rowe  <mrowe@apple.com>

        Reviewed by Darin Adler.

        WebKit should treat port numbers outside the valid range as being blacklisted
        <http://webkit.org/b/36571> / <rdar://problem/7790908>

        * platform/mac/security/block-test-expected.txt:
        * security/block-test.html: Add tests of a few invalid port numbers.

2010-07-02  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Canvas arcTo() should draw straight line to p1 if p0, p1 and p2 are collinear

        The implementation of PathQt's addArcTo() was not float-safe and also had
        a case where it drew an 'infinite' line, which is not part of the spec.

        http://www.whatwg.org/specs/web-apps/current-work/#dom-context-2d-arcto

        We now use qFuzzyCompare() in both cases. The method isPointOnPathBorder()
        also had the same problem, and was refactored a bit in the process of fixing
        the bug.

        Initial patch by Andreas Kling.

        https://bugs.webkit.org/show_bug.cgi?id=41412

        * platform/qt/Skipped:

2010-06-24  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.

        Spatial Navigation: refactor spatial-navigation-utils.js to support testing nested frames deeper than one level
        https://bugs.webkit.org/show_bug.cgi?id=41157

        As is today, we can not test focused nodes in inner frames nested more than one level
        deep, due to spatial-navigation-utils.js limitations. Patch addresses this problem:
        any time before any focus check, it retrieves the proper focused frame in any level deep.

        All spatial navigation test results changed output because the parameter passed in to