@@ -1,3 +1,14 @@
+2010-03-31  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Darin Adler.
+
+        <http://webkit.org/b/36878> REGRESSION: Trailing colon on hostnames (with no port specified) causes "Not allowed to use restricted network port"
+
+        Add explicit tests for handling of allowed ports.  We currently only test the ports that map to port 80: 0, 80, and "".
+
+        * platform/mac/security/block-test-expected.txt:
+        * security/block-test.html:
+
 2010-03-24  Mark Rowe  <mrowe@apple.com>
 
         Revert the portion of r56489 that dealt with port zero as it introduced some test failures.
